<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    android:padding="5dp"
    app:cardBackgroundColor="@color/card_color"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPlotType"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/plot_type"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/textViewDetails"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/details"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>






    </LinearLayout>


</androidx.cardview.widget.CardView>