<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ComplainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fill the form:"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/plot_type">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewPlotType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/city_corporation">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewCityCorporation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/police_station">


            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewThana"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/word_no"
            android:textColorHint="@color/hint_color">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextWordNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/house_no"
            android:textColorHint="@color/hint_color">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextHouseNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/road_no"
            android:textColorHint="@color/hint_color">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextRoadNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/approval"
            android:textColorHint="@color/hint_color">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextApproval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_input_border"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click on the icon for capture location"
                android:textSize="11sp"
                android:layout_marginStart="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/EditTextLongitude"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:hint="Longitude"
                android:gravity="center"
                android:focusable="false"
                android:clickable="false"
                android:longClickable="false"/>

            <EditText
                android:id="@+id/EditTextLatitude"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_weight="1"

                android:hint="Latitude"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:focusable="false"
                android:clickable="false"
                android:longClickable="false"/>


            <Button
                android:id="@+id/buttonLocation"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="10dp"
                android:elevation="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/ic_location" />


        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_input_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="Add photos from 4 angle"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageViewLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_add_photo"
                    app:tint="@color/default_day_night"/>

                <ImageView
                    android:id="@+id/imageViewRight"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_add_photo"
                    app:tint="@color/default_day_night"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageViewUp"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_add_photo"
                    app:tint="@color/default_day_night" />

                <ImageView
                    android:id="@+id/imageViewDown"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_add_photo"
                    app:tint="@color/default_day_night" />
            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="5dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/complain_details"
                    android:gravity="start"
                    android:textColorHint="@color/hint_color"
                    />


            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonComplainSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/signin_button_color"/>


    </LinearLayout>
</ScrollView>